<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textSize="30sp"
        android:textColor="@color/textView"
        android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/nameTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapWords"
            android:hint="@string/item_name_textbox"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/imageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image"
            android:textSize="30sp"
            android:textColor="@color/textView"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>

            <ImageButton
                android:id="@+id/galleryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_folder_black_24dp"
                android:contentDescription="@string/gallery_button"
                android:onClick="openGallery"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>

            <ImageButton
                android:id="@+id/cameraButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_photo_camera_black_24dp"
                android:contentDescription="@string/camera_button"
                android:onClick="openCamera"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
        </LinearLayout>

        <ImageView
            android:id="@+id/chosenImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/chosen_image"/>

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_text_view"
            android:textSize="30sp"
            android:textColor="@color/textView"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/descriptionTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences|textMultiLine"
            android:hint="@string/description_text_box"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

</ScrollView>